--- a/templates/province.html
+++ b/templates/province.html
@@ -3,12 +3,12 @@
 </head>
 <iframe id="mappa", src="/mappa"></iframe>
 <form action="/ricercaProv" method = "GET">
-    <input id = "txtbox" type="text" placeholder="Cerca Provincia" name="CercaProv" />
+    <input id = "txtbox" type="text" placeholder="Cerca Provincia" name="CercaProv" required/>
     <input id = "imgRic" type="image" src="static/images/search (1).png" alt = "Submit" >
 </form>
 <form action = "/Province" method = "GET">
     <p><input id = "Reset" type = "submit" value = "Ti sei perso? Click Me!"/></p><br>
 </form>
-<form action = "/" method = "GET">
+<form action = "/explore" method = "GET">
     <p><input id = "cambio" type = "submit" value = "Regioni"/></p><br>
 </form>
