--- a/templates/regioni.html
+++ b/templates/regioni.html
@@ -3,13 +3,13 @@
 </head>
 <iframe id = "mappa", src="/map"></iframe>
 <form action="/ricerca" method = "GET">
-    <input id = "txtbox" type="text" placeholder="Cerca Regione" name="Cerca" />
+    <input id = "txtbox" type="text" placeholder="Cerca Regione" name="Cerca" required/>
     <input id = "imgRic" type="image" src="static/images/search (1).png" alt = "Submit" >
 </form>
-<form action = "/" method = "GET">
+<form action = "/explore" method = "GET">
     <p><input id = "Reset" type = "submit" value = "Ti sei perso? Click Me!"/></p><br>
 </form>
-<form action = "/Province" method = "GET">
+<form action = "/province" method = "GET">
     <p><input id = "cambio" type = "submit" value = "Province"/></p><br>
 </form>
 
