--- a/static/css/style_explore.css
+++ b/static/css/style_explore.css
@@ -1,5 +1,5 @@
 #mappa {
-  position: absolute;
+  position:absolute;
   width: 100%;
   height: 100%;
   left: 0;
@@ -74,4 +74,9 @@
 #cambio:hover {
   border: 3px solid rgba(9, 128, 9, 0.815);
   background-color: #00ff1a79;
+}
+#tabella {
+  position:absolute;
+  left: 10%;
+  top:10%;
 }
