--- a/static/css/style_quiz.css
+++ b/static/css/style_quiz.css
@@ -26,7 +26,7 @@
 }
 #domanda {
   position: absolute;
-  top:6.5%;
+  top:11.3%;
   right:2%;
   color:rgb(255, 255, 255);
   font-size: 40px;
@@ -39,7 +39,7 @@
   width: 100%;
   color: rgb(228, 59, 200);
   font-weight: bold;
-  font-size: 60px;
+  font-size: 50px;
 }
 #opzioni {
   position:absolute;
@@ -49,7 +49,8 @@
   top: 75.8%;
   font-weight: bold;
   font-size: 30px;
-  color:rgb(0, 0, 0);
+  color:rgb(255, 255, 255);
+  text-shadow: 2px 2px #000000;
 }
 #submit {
   background-color: rgb(228, 59, 200);
