--- a/templates/cercaProv.html
+++ b/templates/cercaProv.html
@@ -1,2 +1,4 @@
-{{table | safe}}
-<iframe class="map", src="/mappaRichiestaProv" width="100%" height="93%"></iframe>
+<head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style_explore.css') }}">
+</head>
+<iframe id="mappa", src="/mappaRichiestaProv"></iframe>
