--- a/templates/cercaProv.html
+++ b/templates/cercaProv.html
@@ -2,3 +2,6 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_explore.css') }}">
 </head>
 <iframe id="mappa", src="/mappaRichiestaProv"></iframe>
+<form action = "/Province" method = "GET">
+    <p><input id = "cambio" type = "submit" value = "Torna a Province"/></p><br>
+</form>
