--- a/templates/province.html
+++ b/templates/province.html
@@ -12,3 +12,6 @@
 <form action = "/explore" method = "GET">
     <p><input id = "cambio" type = "submit" value = "Regioni"/></p><br>
 </form>
+<form action = "/home" method = "GET">
+    <p><input id = "homepage" type = "submit" value = "Torna alla HomePage"/></p><br>
+</form>
