--- a/templates/regioni.html
+++ b/templates/regioni.html
@@ -9,7 +9,10 @@
 <form action = "/explore" method = "GET">
     <p><input id = "Reset" type = "submit" value = "Ti sei perso? Click Me!"/></p><br>
 </form>
-<form action = "/province" method = "GET">
+<form action = "/Province" method = "GET">
     <p><input id = "cambio" type = "submit" value = "Province"/></p><br>
+</form>
+<form action = "/home" method = "GET">
+    <p><input id = "homepage" type = "submit" value = "Torna alla HomePage"/></p><br>
 </form>
 
