--- a/static/css/style_explore.css
+++ b/static/css/style_explore.css
@@ -52,6 +52,7 @@
   -webkit-transition: 0.5s;
   transition: 0.5s;
 }
+
 #Reset:hover {
   border: 3px solid rgb(9, 128, 9);
   background-color: #00ff1aa2;
@@ -80,4 +81,24 @@
   position:absolute;
   left: 10%;
   top:10%;
+}
+#homepage{
+  position:absolute;
+  right: 5%;
+  top: 2%;
+  width: 10%;
+  height: 5%;
+  background-color: #00ff1a50;
+  color: rgb(0, 0, 0);
+  text-align: center;
+  font-size: 13.4px;
+  cursor: pointer;
+  font-weight: bold;
+  border: 3px solid rgb(128, 194, 67);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+#homepage:hover {
+  border: 3px solid rgba(9, 128, 9, 0.815);
+  background-color: #00ff1a79;
 }
