--- a/templates/cerca.html
+++ b/templates/cerca.html
@@ -2,6 +2,8 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style_explore.css') }}">
 </head>
 <body>
-    <p id = "table">{{table | safe}}</p>
     <iframe id = "mappa", src="/mappaRichiesta"></iframe>
+    <form action = "/explore" method = "GET">
+        <p><input id = "cambio" type = "submit" value = "Torna a Regioni"/></p><br>
+    </form>
 </body>
