--- a/templates/province_errore.html
+++ b/templates/province_errore.html
@@ -12,4 +12,7 @@
 <form action = "/explore" method = "GET">
     <p><input id = "cambio" type = "submit" value = "Regioni"/></p><br>
 </form>
+<form action = "/home" method = "GET">
+    <p><input id = "homepage" type = "submit" value = "Torna alla HomePage"/></p><br>
+</form>
 <script>alert("La provincia inserita non esiste")</script>
